name:                   monad-loops
version:                0.3.0.2
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
homepage:               http://code.haskell.org/~mokus/monad-loops

category:               Control
synopsis:               Monadic loops
description:            Some useful control operators for looping

Flag useSTM
  Description:          Include instances for STM types
  Default:              True

Flag base4
  Description:          Build using base >= 4
  Default:              True

Library
  hs-source-dirs:       src
  exposed-modules:      Control.Monad.Loops
  if flag(base4)
    cpp-options:        -Dbase4
    build-depends:      base >= 4
  else
    build-depends:      base < 4

  if flag(useSTM)
    build-depends:      stm
    other-modules:      Control.Monad.Loops.STM
    cpp-options:        -DuseSTM
