name:                   monad-loops
version:                0.3.3.0
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
homepage:               https://github.com/mokus0/monad-loops

category:               Control
synopsis:               Monadic loops
description:            Some useful control operators for looping.
                        .
                        New in 0.3.2.0: various functions for traversing lists and 
                        computing minima/maxima using arbitrary procedures to compare
                        or score the elements.

source-repository head
  type: git
  location: git://github.com/mokus0/monad-loops.git

Flag useSTM
  Description:          Include instances for STM types
  Default:              True

Flag base4
  Description:          Build using base >= 4
  Default:              True

Library
  hs-source-dirs:       src
  exposed-modules:      Control.Monad.Loops
  if flag(base4)
    cpp-options:        -Dbase4
    build-depends:      base >= 4 && <5
  else
    build-depends:      base >= 2 && < 4

  if flag(useSTM)
    build-depends:      stm
    other-modules:      Control.Monad.Loops.STM
    cpp-options:        -DuseSTM
