name:                   monad-loops
version:                0.4.2
stability:              provisional
license:                PublicDomain

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
homepage:               https://github.com/mokus0/monad-loops

category:               Control
synopsis:               Monadic loops
description:            Some useful control operators for looping.
                        .
                        New in 0.4: STM loop operators have been split into a
                        new package instead of being conditionally-built.
                        .
                        New in 0.3.2.0: various functions for traversing lists and 
                        computing minima/maxima using arbitrary procedures to compare
                        or score the elements.

source-repository head
  type: git
  location: git://github.com/mokus0/monad-loops.git

Flag base4
  Description:          Build using base >= 4
  Default:              True

Library
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  exposed-modules:      Control.Monad.Loops
  if flag(base4)
    cpp-options:        -Dbase4
    build-depends:      base >= 4 && <5
  else
    build-depends:      base >= 2 && < 4
